--- a/01_materials/labs/02_7_vectordb_docker.ipynb
+++ b/01_materials/labs/02_7_vectordb_docker.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1a0b8faa",
    "metadata": {},
    "outputs": [],
@@ -37,20 +37,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "52811dad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_description = 'Pitchfork reviews content embeddings 2025-10-18 12:17:17'"
+    "batch_description = 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1493892d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'batch_id': 'batch_69017554b00c81908ebb0cec36cdd228',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'in_progress',\n",
+       "  'request_counts': {'completed': 9928, 'failed': 0, 'total': 10000},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-HeZsHPscpBRdHfnJWcQ98o'},\n",
+       " {'batch_id': 'batch_6901755467308190a25ba434f0d87dea',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'finalizing',\n",
+       "  'request_counts': {'completed': 10000, 'failed': 0, 'total': 10000},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-9njXP6BEnxXkzFQ6uasVTq'},\n",
+       " {'batch_id': 'batch_6901755418e88190bc39d6bde6d1775a',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'failed',\n",
+       "  'request_counts': {'completed': 0, 'failed': 0, 'total': 0},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-DVpiaZuEuEvuf8cLC5hZGW'},\n",
+       " {'batch_id': 'batch_69017553d9b4819090de53cececfbcac',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'failed',\n",
+       "  'request_counts': {'completed': 0, 'failed': 0, 'total': 0},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-Bw3C8ZJabFPe4ccxfdpkhc'},\n",
+       " {'batch_id': 'batch_69017553912c81909f3500a087a490e0',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'failed',\n",
+       "  'request_counts': {'completed': 0, 'failed': 0, 'total': 0},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-8Jehc3F5i7PS5pD7AWY7Mg'},\n",
+       " {'batch_id': 'batch_690175534a9881909078fd9b207dc39c',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'failed',\n",
+       "  'request_counts': {'completed': 0, 'failed': 0, 'total': 0},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-7Jv4BCybHJpEvGw6FCz7nZ'},\n",
+       " {'batch_id': 'batch_6901755308e48190acfb177bbc8280c0',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'failed',\n",
+       "  'request_counts': {'completed': 0, 'failed': 0, 'total': 0},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-AYSzUGx3cy5CKaFuURmvSX'},\n",
+       " {'batch_id': 'batch_69017552bff88190b363e4a1269c232e',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'failed',\n",
+       "  'request_counts': {'completed': 0, 'failed': 0, 'total': 0},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-4zmDoAzbyp7ZJpxpMEdmPJ'},\n",
+       " {'batch_id': 'batch_690175526d80819091be22b92b523c2a',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'failed',\n",
+       "  'request_counts': {'completed': 0, 'failed': 0, 'total': 0},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-3ScadgXqzV63C36g62bWE9'},\n",
+       " {'batch_id': 'batch_6901755225208190bbc1a3e95658ec16',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'failed',\n",
+       "  'request_counts': {'completed': 0, 'failed': 0, 'total': 0},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-BGny9DoAEVTqm3zpXVvP72'},\n",
+       " {'batch_id': 'batch_69017551e5e48190a69e7678cffcacfb',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'finalizing',\n",
+       "  'request_counts': {'completed': 10000, 'failed': 0, 'total': 10000},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-Trh9LddoV37LeSxdd6zCdN'},\n",
+       " {'batch_id': 'batch_6901755195748190a22fd98ff4917557',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'failed',\n",
+       "  'request_counts': {'completed': 0, 'failed': 0, 'total': 0},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-6ZXTE7o1TwD6qHG27AUYsm'},\n",
+       " {'batch_id': 'batch_69017551072881909fd628b6f52ae03d',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'in_progress',\n",
+       "  'request_counts': {'completed': 9997, 'failed': 0, 'total': 10000},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-4MjxqWytqrCQqXZkUvnTYU'},\n",
+       " {'batch_id': 'batch_69017550b87081908258085e34372810',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'finalizing',\n",
+       "  'request_counts': {'completed': 10000, 'failed': 0, 'total': 10000},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-UgdWKwcrQ9cvKHQsyBoHNy'},\n",
+       " {'batch_id': 'batch_690175505f24819099f1024bdb0830bf',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'in_progress',\n",
+       "  'request_counts': {'completed': 9919, 'failed': 0, 'total': 10000},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-PJryyBGGxLgb3yskx3G3oS'},\n",
+       " {'batch_id': 'batch_6901754ffcfc8190b2341a0bb6a0dbd7',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'failed',\n",
+       "  'request_counts': {'completed': 0, 'failed': 0, 'total': 0},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-G4CLHbgVicT8TCEFQud5wc'},\n",
+       " {'batch_id': 'batch_6901754fb04881909c8543189f1adabb',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'failed',\n",
+       "  'request_counts': {'completed': 0, 'failed': 0, 'total': 0},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-1Lijm1BkrMba1fo8jgZRk8'},\n",
+       " {'batch_id': 'batch_6901754f63c08190a89141b613d9bdc5',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'in_progress',\n",
+       "  'request_counts': {'completed': 8843, 'failed': 0, 'total': 8876},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-1La8gZ1uBnAUCB6bUJ96bY'},\n",
+       " {'batch_id': 'batch_6901754f0fa4819098e9ca94d4bc561f',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'failed',\n",
+       "  'request_counts': {'completed': 0, 'failed': 0, 'total': 0},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-L6biYuJqSw87dsBfd3dAn1'},\n",
+       " {'batch_id': 'batch_6901754ec9b8819095244a406b1daa9b',\n",
+       "  'description': 'Pitchfork reviews content embeddings (pabucater) 2025-10-28 22:00:41',\n",
+       "  'status': 'failed',\n",
+       "  'request_counts': {'completed': 0, 'failed': 0, 'total': 0},\n",
+       "  'output_file_id': None,\n",
+       "  'input_file_id': 'file-2oZmcCWuvz6RA3rijf6CjL'}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from openai import OpenAI\n",
     "\n",
@@ -81,10 +211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "776b7152",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "batch_complete = [\n",
     "    batch  for batch in batch_info if batch['status'] == 'completed'\n",
@@ -532,7 +673,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "deploying-ai-env (3.12.12)",
    "language": "python",
    "name": "python3"
   },
@@ -546,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
