--- a/02_activities/assignment_1.ipynb
+++ b/02_activities/assignment_1.ipynb
@@ -49,10 +49,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b8dbcc48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dotenv extension is already loaded. To reload it, use:\n",
+      "  %reload_ext dotenv\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext dotenv\n",
     "%dotenv ../05_src/.secrets"
@@ -88,7 +97,47 @@
    "id": "256159db",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%load_ext dotenv\n",
+    "%dotenv ../../05_src/.secrets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db23b2b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_community.document_loaders import PyPDFLoader\n",
+    "\n",
+    "file_path = \"../05_src/documents/Managing Oneself_Drucker_HBR.pdf\"\n",
+    "loader = PyPDFLoader(file_path)\n",
+    "\n",
+    "docs = loader.load()\n",
+    "\n",
+    "print(len(docs))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83152f66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "document_text = \"\"\n",
+    "for page in docs:\n",
+    "    document_text += page.page_content + \"\\n\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -234,7 +283,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "deploying-ai-env (3.12.12)",
    "language": "python",
    "name": "python3"
   },
@@ -248,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
