--- a/02_activities/assignment_1.ipynb
+++ b/02_activities/assignment_1.ipynb
@@ -49,19 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b8dbcc48",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The dotenv extension is already loaded. To reload it, use:\n",
-      "  %reload_ext dotenv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext dotenv\n",
     "%dotenv ../05_src/.secrets"
@@ -93,18 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "256159db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext dotenv\n",
-    "%dotenv ../../05_src/.secrets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "db23b2b1",
    "metadata": {},
    "outputs": [
@@ -129,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "83152f66",
    "metadata": {},
    "outputs": [],
@@ -172,7 +152,59 @@
    "id": "87372dc1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from openai import OpenAI\n",
+    "from pydantic import BaseModel\n",
+    "\n",
+    "client = OpenAI()\n",
+    "\n",
+    "class DocumentReview(BaseModel):\n",
+    "    author: str\n",
+    "    title: str\n",
+    "    relevance: str\n",
+    "    summary: str\n",
+    "    tone: str\n",
+    "    input_tokens: str\n",
+    "    output_tokens: str\n",
+    "\n",
+    "system_content = \"Create a summary of the document with the fields listed in the text_format. Tone: Victorian English.\"\n",
+    "user_content = \"\"\"\n",
+    "    Summarize the following document.\n",
+    "    <document>{document}</document>\n",
+    "\"\"\"\n",
+    "\n",
+    "response = client.responses.parse(\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    input=[\n",
+    "        {\"role\": \"system\", \"content\": system_content},\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": user_content.format(document=document_text),\n",
+    "        },\n",
+    "    ],\n",
+    "    text_format=DocumentReview,\n",
+    ")\n",
+    "\n",
+    "summary = response.output_parsed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b344c769",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "author='Peter F. Drucker' title='Managing Oneself' relevance='High' summary=\"In this seminal work, Peter F. Drucker expounds upon the necessity for individuals in the modern knowledge economy to assume responsibility for their own careers. He posits that traditional corporate structures no longer manage careers effectively, necessitating that individuals become the chief executives of their own lives. Drucker emphasizes the importance of self-knowledge in discovering one’s strengths, weaknesses, work styles, values, and optimal environments to flourish. Key inquiries include understanding personal strengths through feedback analysis, recognizing one’s learning and performance preferences, and determining one’s core values. Drucker advocates for aligning personal contributions with organizational needs, while also preparing for a second career or fulfilling engagements after achieving initial professional milestones. Ultimately, he urges that managing oneself is crucial for achieving sustained excellence and fulfillment in one's career, insisting that this introspection is pivotal for achieving impactful results.\" tone='Victorian English' input_tokens='1188' output_tokens='212'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(summary)"
+   ]
   },
   {
    "cell_type": "markdown",
